--- a/apps/landing/src/pages/index.astro
+++ b/apps/landing/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/BaseLayout.astro';
 import '../styles/portfolio.css';
+import Analytics from '@vercel/analytics/astro'
 
 // LIVE URL (be sure VITE_STOCK_URL is set in your .env or Vercel)
 const STOCK_URL     = import.meta.env.VITE_STOCK_URL;
