--- a/apps/landing/src/layouts/BaseLayout.astro
+++ b/apps/landing/src/layouts/BaseLayout.astro
@@ -1,3 +1,5 @@
+import  SpeedInsights  from "@vercel/speed-insights/astro"
+import Analytics from '@vercel/analytics/astro'
 ---
 /** 
  * apps/landing/src/layouts/BaseLayout.astro
@@ -10,7 +12,7 @@
  *     <!-- page‐specific content here -->
  *   </Layout>
  */
-import Analytics from '@vercel/analytics/astro'
+
 // Pull in the `title` prop; default to an empty string if not provided
 const { title = '' } = Astro.props;
 ---
